# syke

./: .env.example  .gitignore  .pii-patterns  BACKLOG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LOCAL_DEV.md  MANIFEST.in  PLATFORMS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SKILL.md  install_syke.sh  pyproject.toml  setup.py
.claude/: CLAUDE.md
.claude/commands/: release.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: _tests.yml  ci.yml  deploy-docs.yml  deploy-viz.yml  publish.yml
.sisyphus/drafts/: architecture-v3.md
_internal/syke-replay-lab/: CLAUDE_UI_HANDOFF_JUDGE_V2.md  ENVIRONMENT_CONTRACT.md  EVAL.md  MINIMAL_LAB_STANDARDS.md  QUICK_REFERENCE.md  README.md  RUN_MANAGER_DESIGN.md  SELF_OBSERVATION_VARIANTS_20260416.md  TAXONOMY.md  benchmark_runner.py  benchmark_scorer.py  labctl.py  manage_eval_packets.py  memory_replay.py
docs/: ADAPTER-PROTOCOL.md  ARCHITECTURE.md  CLI_UX_SPEC.md  CONFIG_REFERENCE.md  CURRENT_STATE.md  FEDERATION-ARCHITECTURE.md  MEMEX_EVOLUTION.md  MEMEX_IN_USE.md  MEMEX_UPDATE_2.md  OBSERVE-ARCHITECTURE.md  OBSERVE-PRINCIPLES.md  OBSERVE-SCHEMA.md  PACKAGING_AND_INSTALL.md  PROVIDERS.md  README.md  RELEASE_READINESS.md  REPLAY_LAB_GOVERNANCE.md  REPLAY_LAB_NE13_15D_AZMINI.md  RUNTIME_AND_REPLAY.md  SANDBOX.md  SETUP.md  TESTING.md  observe-architecture.html  synthesis-architecture.html  workflow.excalidraw
docs-site/: .gitignore  package-lock.json  package.json  theme.config.tsx
docs-site/pages/: _meta.ts  changelog.mdx  contributing.mdx  index.mdx
docs/guide/: agent-setup.md
docs/skills/: adapter-connection.md  adapter-droid.md
examples/: README.md  mcp_config.json  quick_start.sh
experiments/: README.md  REPLAY_SANDBOX.md  analyze_round.py  benchmark_questions.json  cli_experiments.py  cross_round_analysis.py  generate_synthesis_replay.py  memory_replay.py  replay_viz.html  run_gpt54m_baselines.sh
experiments/eval/: dataset.json  grader.py
experiments/perception/: README.md  eval.py  exploration_archive.py  meta_perceiver.py  meta_prompts.py  meta_runner.py  reflection.py  test_eval.py
experiments/prompts/: ablation_neutral.md  ablation_no_pointers.md  balanced.md  balanced_pi.md  baseline.md  evolve1.md  index.md  minimal.md  minimal_exclude.md  single_doc.md
experiments/runs/: manifest.json
experiments/sandbox/: Dockerfile  docker-compose.yaml  replay.sh  run.py
research/n1-memory-lab/: JUDGE_METHOD_V1.md  NE_1_3_REAL_ASK_EVAL_SET.yaml  REAL_ASK_JUDGE_GUIDANCE_V1.md
scripts/: README.md  check_release_tag.py  dev-reset.sh  docs-preview.sh  fresh-install-test.sh  linux-managed-service-smoke.sh  linux-product-qa.sh  pre-commit-pii-check.sh  profile_diff.py  release-candidate.sh  release-preflight.sh  smoke-artifact-install.sh  smoke-tool-install.sh  test-and-monitor.sh
strategies/ingest/: chatgpt-export.md  claude-code.md  github-api.md  gmail-oauth.md  twitter-browser.md  youtube-browser.md
syke/: __init__.py  __main__.py  cli.py  config.py  config_file.py  db.py  db_safety.py  entrypoint.py  health.py  metrics.py  models.py  onboarding.py  pi_state.py  source_selection.py  sync.py  time.py  trace_store.py  version_check.py
syke/cli_commands/: __init__.py  ask.py  auth.py  config.py  daemon.py  maintenance.py  record.py  setup.py  status.py  web.py
syke/cli_support/: __init__.py  ask_output.py  auth_flow.py  context.py  daemon_state.py  dashboard.py  doctor.py  exit_codes.py  installers.py  providers.py  render.py  setup_support.py
syke/daemon/: __init__.py  ask_slots.py  ask_worker_child.py  ask_workers.py  daemon.py  ipc.py  metrics.py  web.py
syke/distribution/: SKILL.md  __init__.py  ask_agent.py  context_files.py  formatters.py  inject.py  mcp_server.py  pi_ask.py
syke/ingestion/: base.py  chatgpt.py  claude_code.py  codex.py  constants.py  content_filter.py  descriptor.py  gateway.py  github_.py  gmail.py  gmail_auth.py  hermes.py  observe.py  opencode.py  parsers.py  pi.py  registry.py  sqlite_query.py  structured_file.py
syke/llm/: __init__.py  auth_store.py  client.py  codex_auth.py  codex_proxy.py  env.py  litellm_config.py  litellm_proxy.py  pi_client.py  pi_runtime.py  providers.py  runtime_switch.py  simple.py
syke/memory/: __init__.py  consolidator.py  memex.py  pi_synthesis.py  synthesis.py  tools.py  touches.py
syke/observe/: __init__.py  adapter.py  adapter_registry.py  bootstrap.py  catalog.py  chatgpt.py  constants.py  content_filter.py  descriptor.py  dynamic_adapter.py  factory.py  gateway.py  handler.py  harness_registry.py  importers.py  observe.py  parsers.py  registry.py  runtime.py  self_observe.py  sqlite_query.py  sqlite_watcher.py  structured_file.py  trace.py  validator.py  watcher.py  writer.py
syke/perception/: agent_prompts.py  agentic_perceiver.py  perceiver.py  prompts.py  tools.py
syke/runtime/: __init__.py  agents_md.py  child_env.py  locator.py  pi_settings.py  psyche_md.py  sandbox.py  workspace.py
syke/sense/: adapter_generator.py  analyzer.py  discovery.py  dynamic_adapter.py  handler.py  healing.py  intelligence.py  registry.py  sandbox.py  (+5 more)
tests/: conftest.py  observe_artifact_helpers.py  pi_rpc_raw.py  test_adapter_generator.py  test_adapter_sandbox.py  test_agentic_perception.py  test_analyzer.py  test_ask.py  test_ask_slots.py  test_auth_flow.py  test_auth_store.py  test_azure_gpt5_thinking.py  test_build_prompt.py  test_chatgpt_adapter.py  test_cli.py  test_cli_auth.py  test_cli_contract.py  test_cli_new_commands.py  test_cli_self_update.py  test_codex_auth.py  test_codex_observe.py  test_codex_proxy.py  test_config.py  test_config_file.py  test_content_filter.py  test_context_files.py  test_core.py  test_coverage_gate.py  test_daemon.py  test_daemon_ask_workers.py  test_daemon_controls.py  test_daemon_ipc.py  test_daemon_metrics.py  test_daemon_state.py  test_db.py  test_db_safety.py  test_deployment_loop.py  test_descriptors.py  test_discovery.py  test_distribution.py  (+71 more)
viz/: README.md  package-lock.json  package.json  vercel.json
(+253 files in other folders)
