[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syke"
version = "0.4.2"
description = "Agentic memory for AI — collects your digital footprint, synthesizes your identity, feeds that to any AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Utkarsh Saxena", email = "utkarsh@mysyke.com" }]
keywords = ["ai", "context", "memory", "anthropic", "claude", "identity", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.79.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "uuid7>=0.1.0",
    "claude-agent-sdk>=0.1.38",
]

[project.optional-dependencies]
gmail = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.100"]
dev = ["pytest>=8.0"]
all = ["syke[gmail]", "syke[dev]"]

[project.urls]
Repository = "https://github.com/saxenauts/syke"
Documentation = "https://syke-docs.vercel.app"
Changelog = "https://github.com/saxenauts/syke/blob/main/CHANGELOG.md"

[project.scripts]
syke = "syke.cli:cli"

[tool.setuptools.packages.find]
include = ["syke*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.tbump]

[tool.tbump.version]
current = "0.4.2"
regex = '''(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'''

[tool.tbump.git]
tag_template = "v{new_version}"
message_template = "Release v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "syke/__init__.py"
search = '__version__ = "{current_version}"'
