[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syke"
version = "0.4.6"
description = "Agentic memory for AI — collects your digital footprint, synthesizes your identity, feeds that to any AI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Utkarsh Saxena", email = "utkarsh@mysyke.com" }]
keywords = ["ai", "context", "memory", "anthropic", "claude", "identity", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.79.0",
    "click>=8.1",
    "httpx>=0.27",
    "litellm[proxy]==1.82.0",  # PINNED: 1.82.7+ compromised (supply chain attack, 2026-03-24)
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "uuid7>=0.1.0",
    "watchdog>=6.0.0",
    "claude-agent-sdk>=0.1.38",
    "simple-term-menu>=1.6",
]

[project.optional-dependencies]
gmail = ["google-auth-oauthlib>=1.0", "google-api-python-client>=2.100"]
dev = ["pytest>=8.0", "ruff>=0.8", "build>=1.0"]
all = ["syke[gmail]", "syke[dev]"]

[project.urls]
Repository = "https://github.com/saxenauts/syke"
Documentation = "https://syke-docs.vercel.app"
Changelog = "https://github.com/saxenauts/syke/blob/main/CHANGELOG.md"

[project.scripts]
syke = "syke.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["syke*"]

[tool.setuptools.package-data]
syke = [
    "llm/backends/skills/*.md",
    "memory/skills/*.md",
    "observe/descriptors/*.toml",
    "observe/skills/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.tbump]

[tool.tbump.version]
current = "0.4.6"
regex = '''(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'''

[tool.tbump.git]
tag_template = "v{new_version}"
message_template = "Release v{new_version}"

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "syke/__init__.py"
search = '__version__ = "{current_version}"'

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"experiments/**" = ["E501"]
"syke/cli.py" = ["E501"]
"syke/db.py" = ["E501"]
"syke/distribution/ask_agent.py" = ["E501"]
"syke/distribution/context_files.py" = ["E501"]
"syke/distribution/harness/hermes.py" = ["E501"]
"syke/llm/env.py" = ["E501"]
"syke/memory/synthesis.py" = ["E501"]
"syke/models.py" = ["E501"]
"syke/sync.py" = ["E501"]
"syke/daemon/daemon.py" = ["E501"]
